src/content/styles/modules/_shell.scss
@mixin shell {
    rv-shell {
        overflow: hidden;
        left: 0;
        right: 0;
        bottom: 0;
        top: 0;
        position: absolute;
        z-index: -1;

        &:after {
            content: "";
            position: absolute;
            top: 0;
            bottom: 0;
            right: 0;
            left: 0;
            background-color: #FFFFFF;
            z-index: -2;
        }

        .rv-focus-dialog-content {
            display: none;
        }

        .rv-north-arrow {
            position: absolute;
            transform-origin: top center;
            transition: all $swift-ease-in-duration ease-out;

            md-icon {
                color: black;
            }
        }

        .rv-map-coordinates {
            position: absolute;
            left: rem(17.5);
            bottom: rem(0.5);
            padding: rem(0.2);
            display: flex;
            flex-direction: column;
            font-size: rem(1.2);
            font-weight: 500;
            line-height: 1.5;
            background-color: rgba(255, 255, 255, 0.62);

            span {
                width: rem(16);
                text-align: center;
            }
        }

        @include include-size(rv-sm) {
            .rv-north-arrow {
                top: $toolbar-height;
            }
        }
    }
}

